# typer

./: LICENSE  README.md  flake.nix  pyproject.toml
.claude/: CLAUDE.md
Formula/: typer.rb
typecli/: __main__.py  main.py  sentences.py  words.py
typer_cli/: main.py  profile.py  sentences.py  update.py  words.py
