[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "typecli"
version = "0.1.0"
description = "Typing practice in your terminal. Like monkeytype, but in the CLI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "Will Gerstung" }]
keywords = ["typing", "wpm", "terminal", "cli", "practice"]
classifiers = [
    "Environment :: Console :: Curses",
    "Topic :: Games/Entertainment",
    "Programming Language :: Python :: 3",
]

[tool.setuptools.packages.find]
include = ["typecli*"]

[project.scripts]
typer = "typecli.main:entry"

[project.urls]
Homepage = "https://github.com/willgerstung/typecli"
