[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "typer-cli-tool"
version = "0.3.3"
description = "Typing practice in your terminal. Like monkeytype, but in the CLI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "Will Gerstung" }]
keywords = ["typing", "wpm", "terminal", "cli", "practice"]
classifiers = [
    "Environment :: Console :: Curses",
    "Topic :: Games/Entertainment",
    "Programming Language :: Python :: 3",
]

[tool.setuptools.packages.find]
include = ["typer_cli*"]

[project.scripts]
typer = "typer_cli.main:entry"

[project.urls]
Homepage = "https://github.com/William-Ger/typer"
